--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -15,7 +15,7 @@
     <script src="lib/ui-bootstrap-tpls-1.1.1.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
     <script src="resource/datepicker/datepicker.js"></script>
-    <script src="dist/js/app.js"></script>    
+    <script src="dist/js/app.js"></script>
     <style>
         .full button span {
             background-color: limegreen;
@@ -31,9 +31,8 @@
     </style>
 </head>
 <body ng-controller="richCCController as sample">
-    <pre>Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
-    <h4>Inline</h4>
-    <div style="display:inline-block; min-height:290px;">
+    <pre style="height:48px;line-height:48px;padding:0 15px;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
+    <div style="display:block; height:70vh;width:70vw;margin:calc(0.5 * (30vh - 48px)) auto;">
         <uib-datepicker-temp ng-model="sample.dt" min-date="sample.minDate" show-weeks="true" class="well well-sm" custom-class="sample.getDayClass(date, mode)"></uib-datepicker-temp>
     </div>
 </body>
