--- a/Source.RichCC/Source.RichCC/resource/datepicker/datepicker.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/datepicker.html
@@ -1,4 +1,4 @@
-<div class="uib-datepicker" ng-switch="datepickerMode" role="application" ng-keydown="keydown($event)">
+<div class="uib-datepicker richcc-datepicker" ng-switch="datepickerMode" role="application" ng-keydown="keydown($event)">
   <uib-daypicker-temp ng-switch-when="day" tabindex="0"></uib-daypicker-temp>
   <uib-monthpicker-temp ng-switch-when="month" tabindex="0"></uib-monthpicker-temp>
   <uib-yearpicker-temp ng-switch-when="year" tabindex="0"></uib-yearpicker-temp>
