--- a/Source.RichCC/Source.RichCC/resource/datepicker/day.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/day.html
@@ -1,30 +1,48 @@
-<table class="uib-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
-  <thead>
-    <tr>
-      <th><button type="button" class="btn btn-default btn-sm pull-left uib-left" ng-click="move(-1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-left"></i></button></th>
-      <th colspan="{{::5 + showWeeks}}"><button id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" class="btn btn-default btn-sm uib-title" ng-click="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="-1"><strong>{{title}}</strong></button></th>
-      <th><button type="button" class="btn btn-default btn-sm pull-right uib-right" ng-click="move(1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
-    </tr>
-    <tr>
-      <th ng-if="showWeeks" class="text-center"></th>
-      <th ng-repeat="label in ::labels track by $index" class="text-center"><small aria-label="{{::label.full}}">{{::label.abbr}}</small></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="uib-weeks" ng-repeat="row in rows track by $index">
-      <td ng-if="showWeeks" class="text-center h6"><em>{{ weekNumbers[$index] }}</em></td>
-      <td ng-repeat="dt in row" class="uib-day text-center" role="gridcell"
-        id="{{::dt.uid}}"
-        ng-class="::dt.customClass">
-        <button type="button" class="btn btn-default btn-sm"
-          uib-is-class="
-            'btn-info' for selectedDt,
-            'active' for activeDt
-            on dt"
-          ng-click="select(dt.date)"
-          ng-disabled="::dt.disabled"
-          tabindex="-1"><span ng-class="::{'text-muted': dt.secondary, 'text-info': dt.current}">{{::dt.label}}</span></button>
-      </td>
-    </tr>
-  </tbody>
+<table class="uib-daypicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+    <thead>
+        <tr class="header-action-holder">
+            <th colspan="1"></th>
+            <th colspan="5">
+                <div class="header-actions">
+                    <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0">
+                        <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                    </div>
+                    <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                        <label class="title">{{title}}</label>
+                    </div>
+                    <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0">
+                        <i class="icon icon-ScrollChevronRightLegacy"></i>
+                    </div>
+                </div>
+            </th>
+            <th colspan="1"></th>
+        </tr>
+        <tr class="header-dayname-row">
+            <th ng-if="showWeeks && false" class="text-center"></th>
+            <th colspan="1" ng-repeat="label in ::labels track by $index" class="text-center dayTitle"><span aria-label="{{::label.full}}">{{::label.abbr | limitTo:1}}</span></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="uib-weeks richcc-row" ng-repeat="row in rows track by $index">
+            <td ng-if="showWeeks && false" class="text-center h6"><em>{{ weekNumbers[$index] }}</em></td>
+            <td ng-repeat="dt in row" class="uib-day text-center richcc-td" role="gridcell"
+                id="{{::dt.uid}}"
+                ng-class="::dt.customClass"
+                colspan="1"
+                cc-key="select(dt.date)"
+                ng-disabled="::dt.disabled">
+                <div class="icon-container dayHolder"
+                     uib-is-class="
+                     'cc-info' for selectedDt,
+                     'cc-active' for activeDt
+                     on dt"
+                     ng-class="::{'cc-current': dt.current, 'cc-muted': dt.secondary}"
+                     tabindex="0">
+                    <div class="richcc-day">
+                        <span>{{::dt.label}}</span>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </tbody>
 </table>
