--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -2,7 +2,8 @@
 <html ng-app="richCCSample">
 <head>
     <title>Rich CC Sample</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"  />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="dist/min/css/bootstrap.min.css" rel="stylesheet" />
     <link href="resource/jsoneditor/jsoneditor.min.css" rel="stylesheet" />
     <link href="dist/min/css/richcc.min.css" rel="stylesheet" />
@@ -32,7 +33,7 @@
 </head>
 <body ng-controller="richCCController as sample" style="background:#f0f0f0;">
     <pre style="height:48px;line-height:48px;padding:0 15px;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
-    <div style="display:block; height:80vh;width:50vw;margin:calc(0.5 * (20vh - 48px)) auto;background:#fff;">
+    <div style="display:block; height:80vh;width:600px;margin:calc(0.5 * (20vh - 48px)) auto;background:#fff;">
         <uib-datepicker-temp ng-model="sample.dt" min-date="sample.minDate" show-weeks="false" class="well well-sm" custom-class="sample.getDayClass(date, mode)"></uib-datepicker-temp>
     </div>
 </body>
