--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="lib/angular-animate.min.js"></script>
     <!--<script type="text/javascript" src="lib/ui-bootstrap-tpls.min.js"></script>-->
     <script src="lib/ui-bootstrap-tpls-1.1.1.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
