--- a/Source.RichCC/Source.RichCC/resource/datepicker/day.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/day.html
@@ -29,7 +29,6 @@
                 id="{{::dt.uid}}"
                 ng-class="::dt.customClass"
                 colspan="1"
-                cc-key="select(dt.date)"
                 ng-disabled="::dt.disabled">
                 <div class="icon-container dayHolder"
                      uib-is-class="
@@ -37,24 +36,16 @@
                      'cc-active' for activeDt
                      on dt"
                      ng-class="::{'cc-current': dt.current, 'cc-muted': dt.secondary}"
+                     cc-key="select(dt.date)"
                      tabindex="0">
                     <div class="richcc-day">
                         <span>{{::dt.label}}</span>
                     </div>
                 </div>
-                <!--<div class="markHolder" style="position:relative;">
-                    <div class="mark top" ng-if="$index == 0 || $index == 3 || $index == 4" style="background:#25b768;color:#fff;"><span class="text">ABCD</span></div>
-                    <div class="mark bottom" ng-if="$index == 1 || $index == 2 || $index == 5 || $index == 6" style="background:#e74c3c;color:#fff;"><span class="text">WXYZ</span></div>
-                    <div class="mark morePresent">
-                        <div class="icon-container">
-                            <i class="icon icon-more"></i>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="markHolder" style="position:relative;" ng-show="eventDetails[dt.key].length > 0">
-                    <div class="mark top"
+                    <div class="mark step-{{event.step}}"
                          ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
-                         ng-style="{'background-color': event.bgcolor,'color': event.color, 'width': 100 * event.paintBoxLength + '%'}"
+                         ng-style="{'background-color': event.bgcolor,'color': event.color, 'width': 'calc(' + 100 * event.paintBoxLength + '% - 5px)'}"
                          ng-repeat="event in eventDetails[dt.key]"
                          ng-show="event.startPaint == true"
                          style="color:#fff;">
