--- a/Source.RichCC/Source.RichCC/resource/datepicker/day.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/day.html
@@ -45,11 +45,13 @@
                 <div class="markHolder" style="position:relative;" ng-show="eventDetails[dt.key].length > 0">
                     <div class="mark step-{{event.step}}"
                          ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
-                         ng-style="{'background-color': event.bgcolor,'color': event.color, 'width': 'calc(' + 100 * event.paintBoxLength + '% - 5px)'}"
+                         ng-style="{'color': event.color, 'width': 'calc(' + 100 * event.paintBoxLength + '% - 5px)'}"
                          ng-repeat="event in eventDetails[dt.key]"
                          ng-show="event.startPaint == true"
                          style="color:#fff;">
-                        <span class="text">{{event.name}}</span>
+                        <div class="mark-stripe" ng-style="{'background-color': event.bgcolor}">
+                            <span class="text">{{event.name}}</span>
+                        </div>
                     </div>
                     <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 2">
                         <div class="icon-container">
