--- a/Source.RichCC/Source.RichCC/resource/datepicker/day.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/day.html
@@ -47,7 +47,7 @@
                          ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
                          ng-style="{'color': event.color, 'width': 'calc(' + 100 * event.paintBoxLength + '% - 5px)'}"
                          ng-repeat="event in eventDetails[dt.key]"
-                         ng-show="event.startPaint == true"
+                         ng-if="event.startPaint == true"
                          style="color:#fff;">
                         <div class="mark-stripe" ng-style="{'background-color': event.bgcolor}">
                             <span class="text">{{event.name}}</span>
