--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -37,7 +37,7 @@
     <pre class="col-xs-12" style="line-height:46px;padding:0 15px;margin:0;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
     <div style="width:100%;height:calc(100vh - 48px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
         <div style="display:block; height:600px;width:600px;margin:30px auto;background:#fff;">
-            <uib-datepicker-temp ng-model="sample.dt" events="sample.sampleEvents" min-date="sample.minDate" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+            <uib-datepicker-temp ng-model="sample.dt" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
         </div>
     </div>
     <div class="clearfix"></div>
