--- a/Source.RichCC/Source.RichCC/resource/datepicker/month.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/month.html
@@ -1,16 +1,36 @@
-<table class="uib-monthpicker richcc-monthpicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
-  <thead>
+<table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+    <thead>
+        <tr class="header-action-holder">
+            <th colspan="1"></th>
+            <th colspan="4">
+                <div class="header-actions">
+                    <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0">
+                        <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                    </div>
+                    <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                        <label class="title">{{title}}</label>
+                    </div>
+                    <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0">
+                        <i class="icon icon-ScrollChevronRightLegacy"></i>
+                    </div>
+                </div>
+            </th>
+            <th colspan="1"></th>
+        </tr>
+    </thead>
+  <!--<thead>
     <tr>
       <th><button type="button" class="btn btn-default btn-sm pull-left uib-left" ng-click="move(-1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-left"></i></button></th>
       <th><button id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" class="btn btn-default btn-sm uib-title" ng-click="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="-1"><strong>{{title}}</strong></button></th>
       <th><button type="button" class="btn btn-default btn-sm pull-right uib-right" ng-click="move(1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
     </tr>
-  </thead>
+  </thead>-->
   <tbody>
     <tr class="uib-months" ng-repeat="row in rows track by $index">
       <td ng-repeat="dt in row" class="uib-month text-center" role="gridcell"
         id="{{::dt.uid}}"
-        ng-class="::dt.customClass">
+        ng-class="::dt.customClass"
+          colspan="2">
         <button type="button" class="btn btn-default"
           uib-is-class="
             'btn-info' for selectedDt,
