--- a/Source.RichCC/Source.RichCC/resource/datepicker/year.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/year.html
@@ -1,10 +1,24 @@
-<table class="uib-yearpicker richcc-yearpicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+<table class="uib-yearpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+    <thead>
+        <tr class="header-action-holder">
+            <th colspan="1"></th>
+            <th colspan="3">
+                <div class="header-actions">
+                    <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0">
+                        <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                    </div>
+                    <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                        <label class="title">{{title}}</label>
+                    </div>
+                    <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0">
+                        <i class="icon icon-ScrollChevronRightLegacy"></i>
+                    </div>
+                </div>
+            </th>
+            <th colspan="1"></th>
+        </tr>
+    </thead>
   <thead>
-    <tr>
-      <th><button type="button" class="btn btn-default btn-sm pull-left uib-left" ng-click="move(-1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-left"></i></button></th>
-      <th colspan="{{::columns - 2}}"><button id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" class="btn btn-default btn-sm uib-title" ng-click="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="-1"><strong>{{title}}</strong></button></th>
-      <th><button type="button" class="btn btn-default btn-sm pull-right uib-right" ng-click="move(1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
-    </tr>
   </thead>
   <tbody>
     <tr class="uib-years" ng-repeat="row in rows track by $index">
