--- a/Source.RichCC/Source.RichCC/resource/datepicker/month.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/month.html
@@ -1,6 +1,7 @@
 <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
     <thead>
         <tr class="header-action-holder">
+            <th colspan="1" class="w48"></th>
             <th colspan="1"></th>
             <th colspan="4">
                 <div class="header-actions">
@@ -18,28 +19,18 @@
             <th colspan="1"></th>
         </tr>
     </thead>
-  <!--<thead>
-    <tr>
-      <th><button type="button" class="btn btn-default btn-sm pull-left uib-left" ng-click="move(-1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-left"></i></button></th>
-      <th><button id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" class="btn btn-default btn-sm uib-title" ng-click="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="-1"><strong>{{title}}</strong></button></th>
-      <th><button type="button" class="btn btn-default btn-sm pull-right uib-right" ng-click="move(1)" tabindex="-1"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
-    </tr>
-  </thead>-->
-  <tbody>
-    <tr class="uib-months" ng-repeat="row in rows track by $index">
-      <td ng-repeat="dt in row" class="uib-month text-center" role="gridcell"
-        id="{{::dt.uid}}"
-        ng-class="::dt.customClass"
-          colspan="2">
-        <button type="button" class="btn btn-default"
-          uib-is-class="
-            'btn-info' for selectedDt,
-            'active' for activeDt
-            on dt"
-          ng-click="select(dt.date)"
-          ng-disabled="::dt.disabled"
-          tabindex="-1"><span ng-class="::{'text-info': dt.current}">{{::dt.label}}</span></button>
-      </td>
-    </tr>
-  </tbody>
+    <tbody>
+        <tr class="uib-months" ng-repeat="row in rows track by $index">
+            <td class="uib-month text-center w48" role="gridcell"
+                colspan="1">
+                <rich-months-day-marker></rich-months-day-marker>
+            </td>
+            <td ng-repeat="dt in row" class="uib-month text-center" role="gridcell"
+                id="{{::dt.uid}}"
+                ng-class="::dt.customClass"
+                colspan="1">
+                <rich-months-viewer month-date="dt" month-index="dt.monthIndex" month-select-callback="select(dt.date)"></rich-months-viewer>
+            </td>
+        </tr>
+    </tbody>
 </table>
