--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -46,7 +46,7 @@
                 <div class="col-xs-4" style="padding:0;">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <uib-datepicker-temp ng-model="sample.dt" light="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                            <uib-datepicker-temp ng-model="sample.dt" light="true" events="sample.sampleEvents" event-popup-hide="true" prevent-cal-nav="true" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
                         </div>
                     </div>
                     <div class="col-xs-12" style="padding:0;">
