--- a/Source.RichCC/Source.RichCC/resource/datepicker/year.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/year.html
@@ -4,13 +4,13 @@
             <th colspan="1"></th>
             <th colspan="3">
                 <div class="header-actions">
-                    <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0">
+                    <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                         <i class="icon icon-ScrollChevronLeftLegacy"></i>
                     </div>
-                    <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                    <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode || preventCalNav == true" tabindex="0">
                         <label class="title">{{title}}</label>
                     </div>
-                    <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0">
+                    <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                         <i class="icon icon-ScrollChevronRightLegacy"></i>
                     </div>
                 </div>
