--- a/Source.RichCC/Source.RichCC/resource/datepicker/datepicker.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/datepicker.html
@@ -2,7 +2,8 @@
     <div class="richcc-comp-title">Calendar</div>
     <div class="richcc-cal-holder">
         <uib-daypicker-temp ng-switch-when="day" tabindex="0"></uib-daypicker-temp>
-        <uib-monthpicker-temp ng-switch-when="month" tabindex="0"></uib-monthpicker-temp>
+        <uib-monthpicker-heatmap ng-switch-when="month" ng-if="yearMapHeat == true" tabindex="0"></uib-monthpicker-heatmap>
+        <uib-monthpicker-eventmap ng-switch-when="month" ng-if="yearMapHeat == false" tabindex="0"></uib-monthpicker-eventmap>
         <uib-yearpicker-temp ng-switch-when="year" tabindex="0"></uib-yearpicker-temp>
     </div>
 </div>
