--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -38,6 +38,13 @@
     <div style="width:100%;height:calc(100vh - 48px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
         <div style="display:block; height:600px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
+                <div class="" style="display:inline-block;width:100%;height:600px;">
+                    <uib-datepicker-temp ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                </div>
+            </div>
+        </div>
+        <div style="display:block; height:600px;width:1367px;margin:30px auto;">
+            <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:600px;">
                         <uib-datepicker-temp ng-model="sample.dt" year-map-heat="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
