--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -35,14 +35,7 @@
 <body ng-controller="richCCController as sample" style="background:#f0f0f0;">
     <button ng-click="sample.insertSampleEvent()">Insert Sample</button>
     <pre class="col-xs-12" style="line-height:46px;padding:0 15px;margin:0;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
-    <div style="width:100%;height:calc(100vh - 48px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
-        <div style="display:block; height:600px;width:1367px;margin:30px auto;">
-            <div class="col-xs-12">
-                <div class="" style="display:inline-block;width:100%;height:600px;">
-                    <uib-datepicker-temp ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
-                </div>
-            </div>
-        </div>
+    <div style="width:100%;height:calc(100vh - 96px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
         <div style="display:block; height:600px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-8">
@@ -61,6 +54,13 @@
                             <uib-datepicker-temp ng-model="sample.dt" light="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div style="display:block; height:600px;width:1367px;margin:30px auto;">
+            <div class="col-xs-12">
+                <div class="col-xs-12" style="display:inline-block;width:100%;height:600px;">
+                    <uib-datepicker-temp ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
                 </div>
             </div>
         </div>
