--- a/Source.RichCC/Source.RichCC/resource/datepicker/richcc-month-popup.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/richcc-month-popup.html
@@ -1,8 +1,8 @@
 ﻿<div class="richcc-day-popup">
     <div class="event-container">
-        <div class="event-container-label">{{dt.date | date:'dd MMM, yyyy'}} ({{parent.monthWiseEventDetails[monthIndex][column.key].length}} Events)</div>
+        <div class="event-container-label">{{popitem.date | date:'dd MMM, yyyy'}} ({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</div>
         <div class="event-details-container">
-            <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][column.key]">
+            <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][popitem.key]">
                 <div class="event-marker"></div>
                 <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}">
                     <span class="event-title">{{event.name}}</span> : <span class="event-subject">{{event.subject}}</span>
