Adding Month Event Map - Day Markers

--- a/Source.RichCC/Source.RichCC/resource/datepicker/monthEventWrap.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/monthEventWrap.html
@@ -20,6 +20,11 @@
         </tr>
     </thead>
     <tbody>
+        <tr class="uib-months" style="height: 24px;">
+            <td colspan="6">
+                <rich-months-day-marker></rich-months-day-marker>
+            </td>
+        </tr>
         <tr class="uib-months" ng-repeat="row in rows track by $index">
             <!--<td class="uib-month text-center w48" role="gridcell"
                 colspan="1">
