--- a/Source.RichCC/Source.RichCC/resource/datepicker/monthEventViewer.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/monthEventViewer.html
@@ -7,7 +7,7 @@
     </thead>
     <tbody>
         <tr class="uib-weeks richcc-row">
-            <td colspan="1" class="w48" cc-key="monthSelectCallback()">{{parent.monthViewData[monthIndex].dt.label | limitTo:3}}</td>
+            <td colspan="1" class="w48 eventMonthMarker" cc-key="monthSelectCallback()" >{{parent.monthViewData[monthIndex].dt.label | limitTo:3}}</td>
             <td ng-repeat="row in parent.monthViewData[monthIndex].rows track by $index" role="gridcell"
                 colspan="3"
                 class="uib-day text-center richcc-td"
