--- a/Source.RichCC/Source.RichCC/resource/datepicker/monthviewerdaymarker.html
+++ b/Source.RichCC/Source.RichCC/resource/datepicker/monthviewerdaymarker.html
@@ -1,13 +1,30 @@
-﻿<table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}">
-    <thead>
+﻿<table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+    <thead ng-if="yearMapHeat == true">
         <tr class="header-action-holder">
             <th colspan="1">&nbsp;</th>
         </tr>
     </thead>
+    <thead style="height:0 !important; margin:0;padding:0;line-height:0;" ng-if="yearMapHeat == false">
+        <tr class="header-action-holder" style="height:0 !important; margin:0;padding:0;line-height:0;">
+            <th colspan="1" class="w48" style="height:0 !important; margin:0;padding:0;line-height:0;"></th>
+            <th colspan="18" style="height:0 !important; margin:0;padding:0;line-height:0;">&nbsp;</th>
+        </tr>
+    </thead>
     <tbody>
-        <tr class="uib-weeks richcc-row" ng-repeat="row in [0,1,2,3,4,5,6] track by $index">
+        <tr class="uib-weeks richcc-row" ng-repeat="row in [0,1,2,3,4,5,6] track by $index" ng-if="yearMapHeat == true">
             <td class="uib-day text-center richcc-td" role="gridcell">
                 <span class="marker" ng-show="$index == 1 || $index == 3 || $index == 5">{{monthWiseEventMarkers[0][row].abbr | limitTo:1}}</span>
+            </td>
+        </tr>
+        <tr class="uib-weeks richcc-row" ng-if="yearMapHeat == false">
+            <td colspan="1" class="w48">&nbsp;</td>
+            <td ng-repeat="row in parent.monthViewData[0].rows track by $index" role="gridcell"
+                colspan="3"
+                class="uib-day text-center richcc-td"
+                ng-init="weekindex = $index">
+                <div class="richcc-month-eventbox eventDayMarker" ng-repeat="column in row track by $index">
+                    <span>{{monthWiseEventMarkers[0][$index].abbr | limitTo:1}}</span>
+                </div>
             </td>
         </tr>
     </tbody>
