--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -60,7 +60,7 @@
         <div style="display:block; height:600px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:600px;">
-                    <uib-datepicker-temp ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                    <uib-datepicker-temp datepicker-mode="'month'" ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
                 </div>
             </div>
         </div>
