Removing Console Logs

--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -40,7 +40,7 @@
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:600px;">
-                        <uib-datepicker-temp ng-model="sample.dt" year-map-heat="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                        <uib-datepicker-temp datepicker-mode="'month'" ng-model="sample.dt" year-map-heat="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
                     </div>
                 </div>
                 <div class="col-xs-4" style="padding:0;">
