--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -40,18 +40,18 @@
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:600px;">
-                        <uib-datepicker-temp datepicker-mode="'day'" ng-model="sample.dt" year-map-heat="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                        <richcc-datepicker datepicker-mode="'day'" ng-model="sample.dt" year-map-heat="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></richcc-datepicker>
                     </div>
                 </div>
                 <div class="col-xs-4" style="padding:0;">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <uib-datepicker-temp ng-model="sample.dt" light="true" events="sample.sampleEvents" event-popup-hide="true" prevent-cal-nav="true" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                            <richcc-datepicker ng-model="sample.dt" light="true" events="sample.sampleEvents" event-popup-hide="true" prevent-cal-nav="true" show-weeks="false" class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <uib-datepicker-temp ng-model="sample.dt" light="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                            <richcc-datepicker ng-model="sample.dt" light="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
         <div style="display:block; height:600px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:600px;">
-                    <uib-datepicker-temp datepicker-mode="'month'" ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></uib-datepicker-temp>
+                    <richcc-datepicker datepicker-mode="'month'" ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></richcc-datepicker>
                 </div>
             </div>
         </div>
